samples/_failures_safe/1761409538_b53dfa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a32b8f2.c: In function ‘main’:
./samples/SAFE/__tmp_6a32b8f2.c:144:5: error: expected expression at end of input
  144 |     double compression_ratio = (compressed.size * 100.0) /
      |     ^~~~~~
./samples/SAFE/__tmp_6a32b8f2.c:144:5: error: expected declaration or statement at end of input
